// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-sku-response should parse the GetLowestPricedOffersForSKUResponse missing shipping charge example response from MWS doc 1`] = `
Object {
  "getLowestPricedOffersForSkuResult": Object {
    "identifier": Object {
      "asin": null,
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": "0I-RIAS-6UA0",
      "timeOfOfferChange": null,
    },
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": Array [],
    "sku": "0I-RIAS-6UA0",
    "status": "NoOfferDueToMissingShippingCharge",
    "summary": Object {
      "buyBoxEligibleOffers": Array [],
      "buyBoxPrices": Array [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": Array [],
      "numberOfOffers": Array [],
      "offersAvailableTime": null,
      "salesRankings": Array [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": Object {
    "requestId": "75621aa7-9c8b-40be-9bf9-3ac1efdcdb87",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-sku-response should parse the GetLowestPricedOffersForSKUResponse success example response from MWS doc (updated) 1`] = `
Object {
  "getLowestPricedOffersForSkuResult": Object {
    "identifier": Object {
      "asin": null,
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": "GE Product",
      "timeOfOfferChange": 2015-07-19T23:15:11.859Z,
    },
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": Array [
      Object {
        "conditionNotes": "Some notes",
        "isBuyBoxWinner": true,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": Object {
          "amount": 32.99,
          "currencyCode": "USD",
        },
        "myOffer": false,
        "points": null,
        "primeInformation": Object {
          "isNationalPrime": true,
          "isPrime": true,
        },
        "sellerFeedbackRating": Object {
          "feedbackCount": 1,
          "sellerPositiveFeedbackRating": 100,
        },
        "sellerId": "SELLERID",
        "shipping": Object {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": Object {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsFrom": null,
        "subCondition": "new",
      },
    ],
    "sku": "GE Product",
    "status": "Success",
    "summary": Object {
      "buyBoxEligibleOffers": Array [
        Object {
          "condition": "new",
          "count": 1,
          "fulfillmentChannel": "Amazon",
        },
      ],
      "buyBoxPrices": Array [
        Object {
          "condition": "New",
          "landedPrice": Object {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "listingPrice": Object {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": Object {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "competitivePriceThreshold": null,
      "listPrice": Object {
        "amount": 58.34,
        "currencyCode": "USD",
      },
      "lowestPrices": Array [
        Object {
          "condition": "new",
          "fulfillmentChannel": "Amazon",
          "landedPrice": Object {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "listingPrice": Object {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": Object {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "numberOfOffers": Array [
        Object {
          "condition": "new",
          "count": 1,
          "fulfillmentChannel": "Amazon",
        },
      ],
      "offersAvailableTime": null,
      "salesRankings": Array [
        Object {
          "productCategoryId": "book_display_on_website",
          "rank": 401,
        },
        Object {
          "productCategoryId": "15356791",
          "rank": 5,
        },
        Object {
          "productCategoryId": "3153",
          "rank": 8,
        },
        Object {
          "productCategoryId": "17468",
          "rank": 16,
        },
      ],
      "suggestedLowerPricePlusShipping": Object {
        "amount": 32.99,
        "currencyCode": "USD",
      },
      "totalOfferCount": 1,
    },
  },
  "responseMetadata": Object {
    "requestId": "fd2e6c6d-0b6d-499b-9fea-074175c0547a",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-sku-response should parse the GetLowestPricedOffersForSKUResponse success with no offers example response from MWS doc 1`] = `
Object {
  "getLowestPricedOffersForSkuResult": Object {
    "identifier": Object {
      "asin": null,
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": "0I-RIAS-6UA0",
      "timeOfOfferChange": null,
    },
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": Array [],
    "sku": "0I-RIAS-6UA0",
    "status": "NoBuyableOffers",
    "summary": Object {
      "buyBoxEligibleOffers": Array [],
      "buyBoxPrices": Array [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": Array [],
      "numberOfOffers": Array [],
      "offersAvailableTime": null,
      "salesRankings": Array [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": Object {
    "requestId": "75621aa7-9c8b-40be-9bf9-3ac1efdcdb87",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-sku-response should parse the GetLowestPricedOffersForSKUResponse too soon for processing example response from MWS doc 1`] = `
Object {
  "getLowestPricedOffersForSkuResult": Object {
    "identifier": Object {
      "asin": null,
      "itemCondition": "New",
      "marketplaceId": "A2EUQ1WTGCTBG2",
      "sellerSku": "ACA-8039-6PK-DL57",
      "timeOfOfferChange": null,
    },
    "itemCondition": "New",
    "marketplaceId": "A2EUQ1WTGCTBG2",
    "offers": Array [],
    "sku": "ACA-8039-6PK-DL57",
    "status": "ActiveButTooSoonForProcessing",
    "summary": Object {
      "buyBoxEligibleOffers": Array [],
      "buyBoxPrices": Array [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": Array [],
      "numberOfOffers": Array [],
      "offersAvailableTime": 2017-03-08T07:13:21.763Z,
      "salesRankings": Array [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": Object {
    "requestId": "1212334",
  },
}
`;
